Fix display quirks (mostly IE)

--- a/src/app/pages/adoption/adoption.scss
+++ b/src/app/pages/adoption/adoption.scss
@@ -1,6 +1,9 @@
+@import '../../node_modules/pattern-library/core/pattern-library/headers';
+
 .adoption-page {
 
     .subhead {
+        @include layout-container($text-content-max);
         padding-bottom: 2rem;
     }
 
@@ -26,6 +29,7 @@
     }
 
     .cta {
+        @include layout-container($text-content-max);
         display: flex;
         flex-direction: row;
         justify-content: space-between;
