--- a/src/app/pages/interest/interest.scss
+++ b/src/app/pages/interest/interest.scss
@@ -10,8 +10,8 @@
     .cta {
         display: flex;
         flex-direction: row;
-        justify-content: space-between;
-        padding: 0 1.5rem 4rem;
+        justify-content: flex-end;
+        padding: 0;
         width: 100%;
     }
 
