--- a/src/app/pages/support/support.scss
+++ b/src/app/pages/support/support.scss
@@ -19,7 +19,6 @@
     }
 
     .main {
-        // background-color: lighten(color(neutral-lighter), 8%);
         padding: 0;
     }
 
@@ -31,20 +30,11 @@
         .resource-box {
             background-color: ui-color(white);
             display: flex;
-            flex: 1 1 100%;
+            flex: 1 0 20rem;
             flex-direction: column;
             justify-content: space-between;
             margin: 1.5rem;
-            min-width: 25rem;
             padding: 1.5rem;
-
-            @media (min-width: 600px) {
-                flex-basis: calc(50% - 3rem);
-            }
-
-            @media (min-width: 1150px) {
-                flex-basis: calc(25% - 3rem);
-            }
 
             .name {
                 @include set-font(h4);
