--- a/src/app/pages/adopters/adopters.scss
+++ b/src/app/pages/adopters/adopters.scss
@@ -2,6 +2,8 @@
 
 .adopters-page {
 
+    @extend %content;
+
     h1 {
         margin-bottom: 2rem;
         text-align: center;
@@ -16,7 +18,7 @@
         column-count: 3;
         column-gap: 5rem;
         list-style-type: none;
-        max-width: $content-max;
+        width: 100%;
 
         @include width-up-to($phone-max) {
             column-count: 1;
