Rework Foundation page
Handle optional logo and description
Move Foundation Support menu item to upper menu and rename to Our
Supporters
Make Our Impact a simple menu item, not a dropdown

--- a/src/app/components/shell/header/upper-menu/upper-menu.html
+++ b/src/app/components/shell/header/upper-menu/upper-menu.html
@@ -1,6 +1,7 @@
 <template args="model">
     <ul class="nav-menu meta-menu no-bullets" role="menu" aria-label="Meta navigation menu">
         <li class="nav-menu-item"><a href="/about" role="menuitem">About Us</a></li>
+        <li class="nav-menu-item"><a href="/foundation" role="menuitem">Our Supporters</a></li>
         <li if="model.showBlog" class="nav-menu-item"><a href="/blog" role="menuitem">Blog</a></li>
         <li class="nav-menu-item"><a href="/give" role="menuitem">Give</a></li>
         <li class="nav-menu-item"><a href="/support" role="menuitem">Support</a></li>
