--- a/src/app/components/shell/header/main-menu/main-menu.html
+++ b/src/app/components/shell/header/main-menu/main-menu.html
@@ -37,14 +37,8 @@
                 <li role="presentation"><a href="/partners" role="menuitem" tabindex="-1">OpenStax Partners</a></li>
             </ul>
         </li>
-        <li class="nav-menu-item dropdown" role="presentation">
-            <a href="/impact" role="menuitem" aria-haspopup="true">Our Impact<svg class="chevron" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 18 30"><title>arrow</title><path d="M12,1L26,16,12,31,8,27,18,16,8,5Z" transform="translate(-8 -1)"/></svg></a>
-            <ul class="dropdown-menu" role="menu"
-             aria-expanded="{model.openDropdown === 'impact'}"
-             aria-label="Our Impact menu">
-                <li role="presentation"><a href="/impact" role="menuitem" tabindex="-1">Explore Our Impact</a></li>
-                <li role="presentation"><a href="/foundation" role="menuitem" tabindex="-1">Foundation Support</a></li>
-            </ul>
+        <li class="nav-menu-item" role="presentation">
+            <a href="/impact" role="menuitem" aria-haspopup="true">Our Impact</a>
         </li>
         <li class="nav-menu-item login{model.user.username ? ' dropdown' : ''}">
             <if condition="!model.user.username">
