Handle Polish Physics book

--- a/src/app/pages/details/details.scss
+++ b/src/app/pages/details/details.scss
@@ -106,6 +106,10 @@ $special-breakpoint: 54rem;
         @include wider-than($phone-max) {
             flex-flow: row wrap;
         }
+
+        &:empty {
+            display: none;
+        }
     }
 
     .cta > .btn {
