Bug fixes for 10/9 release
Popup dismiss
Change “Support” menu to “Help”
Handle “Get this title” floating menu at the bottom of the page
Make “Get this title” hover menu wider so the button doesn’t hang off

--- a/src/app/components/popup/popup.html
+++ b/src/app/components/popup/popup.html
@@ -2,7 +2,7 @@
     <div class="overlay" if="model.show">
         <div role="dialog" aria-describedby="popupMessage">
             <p id="popupMessage">{model.message}</p>
-            <button tabindex="1">Got it</button>
+            <button class="dismiss" tabindex="1">Got it</button>
         </div>
     </div>
 </template>
