--- a/src/app/pages/details/details.scss
+++ b/src/app/pages/details/details.scss
@@ -174,10 +174,7 @@ $special-breakpoint: 54rem;
             }
 
             &.bottom {
-                bottom: 0;
-                position: absolute;
-                top: auto;
-                z-index: 0;
+                top: 7rem;
             }
 
             h2 {
