--- a/src/app/pages/adoption/teacher-form/teacher-form.html
+++ b/src/app/pages/adoption/teacher-form/teacher-form.html
@@ -4,7 +4,7 @@
      action="https://{model.salesforceHome}/servlet/servlet.WebToLead?encoding=UTF-8" method="post">
         <div>
             <input name="utf8" type="hidden" value="✓">
-            <input type="hidden" name="oid" value="00DU0000000Kwch">
+            <input type="hidden" name="oid" value="{model.salesforceOid}">
             <input type="hidden" name="lead_source" value="Adoption Form">
             <input type="hidden" name="Role__c" value="{model.userRole}">
         </div>
