--- a/src/app/pages/comp-copy/comp-copy.html
+++ b/src/app/pages/comp-copy/comp-copy.html
@@ -9,7 +9,7 @@
         <div class="text-content">
              <div>
                 <input name="utf8" type="hidden" value="✓">
-                <input type=hidden name="oid" value="00DU0000000Kwch">
+                <input type=hidden name="oid" value="{model.salesforceOid}">
                 <input type=hidden name="lead_source" value="Comp Request">
             </div>
 
