--- a/src/app/pages/interest/teacher-form/teacher-form.html
+++ b/src/app/pages/interest/teacher-form/teacher-form.html
@@ -3,7 +3,7 @@
     <form accept-charset="UTF-8" action="https://{model.salesforceHome}/servlet/servlet.WebToLead?encoding=UTF-8"
      target="form-response" class="new_adoption_interest form" method="post">
         <div>
-            <input type="hidden" name="oid" value="00DU0000000Kwch">
+            <input type="hidden" name="oid" value="{model.salesforceOid}">
             <input type="hidden" name="lead_source" value="OS Interest Form">
             <input type="hidden" name="00NU00000055spw" value="High Interest in Adopting">
             <input type="hidden" name="Role__c" value="{model.userRole}">
