--- a/src/app/components/shell/header/main-menu/main-menu.html
+++ b/src/app/components/shell/header/main-menu/main-menu.html
@@ -59,7 +59,7 @@
                     </a>
                 </li>
                 <li class="tutor-menu-item" role="presentation" if="model.user.groups.includes('Tutor')">
-                    <a href="https://tutor.openstax.org/" role="menuitem" tabindex="-1"">OpenStax Tutor</a>
+                    <a href="https://tutor.openstax.org/" role="menuitem" tabindex="-1">OpenStax Tutor</a>
                     <div if="model.trainingWheelActive" class="training-wheel">
                         <div class="put-away-row" tabindex="-1"><button class="put-away" tabindex="0" data-keep-open="true">×</button></div>
                         <img src="/images/openstax-tutor/tutor-logo.svg">
