--- a/src/app/pages/bulk-order/bulk-order.scss
+++ b/src/app/pages/bulk-order/bulk-order.scss
@@ -7,7 +7,7 @@
 
     [type="submit"] {
         background-color: os-color(orange);
-        color: color(neutral-lightest);
+        color: text-color(white);
         float: none;
     }
 
