Fix Polish "details" link and slug
Also relocate TOC-insertion code so it doesn’t depend on User info
being loaded.

--- a/src/app/pages/subjects/book-viewer/category-section/book/book.html
+++ b/src/app/pages/subjects/book-viewer/category-section/book/book.html
@@ -4,7 +4,7 @@
         <div class="get-this-title-container" skip="true"></div>
         <div class="cta">
             <a href="/details/{model.slug}" class="btn"
-                tabindex="{model.detailsOpenClass ? 0 : -1}">details & resources</a>
+                tabindex="{model.detailsOpenClass ? 0 : -1}">{model.detailsLinkText}</a>
         </div>
     </div>
 </template>
