Stop overwriting the AP statement

--- a/src/app/components/shell/footer/footer.html
+++ b/src/app/components/shell/footer/footer.html
@@ -38,7 +38,7 @@
 
             <p>
                 <!-- ap is not rich text, but will contain HTML markup. -->
-                <ap-html data-html="apStatement"></ap-html>
+                <ap-html data-html="apStatement" skip="true"></ap-html>
             </p>
         </div>
 
