Remove underlines in navigation elements

--- a/src/app/components/get-this-title/get-this-title.scss
+++ b/src/app/components/get-this-title/get-this-title.scss
@@ -98,6 +98,7 @@
         .option-header {
             display: block;
             padding-left: 3rem;
+            text-decoration-line: none;
         }
 
         a {
