Use Polish "Coming Soon" indicator

--- a/src/app/pages/details/details-loaded-polish.html
+++ b/src/app/pages/details/details-loaded-polish.html
@@ -1,6 +1,6 @@
 <template args="model">
     <section class="container book-info">
-        <div class="cover-wrap{model.comingSoon}"><img src="{model.cover_url}" alt="" class="book-cover"></div>
+        <div class="polish cover-wrap{model.comingSoon}"><img src="{model.cover_url}" alt="" class="book-cover"></div>
             <section class="details">
                 <h1 class="title" data-html="title" skip="true"></h1>
                 <div class="tabs">
