--- a/src/app/pages/subjects/subjects.scss
+++ b/src/app/pages/subjects/subjects.scss
@@ -102,6 +102,10 @@
                 @include coming-soon;
             }
 
+            &.coming-soon.polish::before {
+                background-image: url('/images/subjects/coming-soon-polish.svg');
+            }
+
             img {
                 width: 100%;
             }
