--- a/src/app/components/get-this-title/get-this-title.html
+++ b/src/app/components/get-this-title/get-this-title.html
@@ -57,8 +57,12 @@
                 <a role="button" href="{model.pdfLink}" class="show-pdf-submenu"
                     tabindex="{model.submenu === '' ? 0 : -1}">
                     <span class="fa fa-cloud-download"></span>
-                    Download a PDF
-                    <if condition="model.comingSoon">{' sample'}</if>
+                    <if condition="model.slug === 'books/fizyka-dla-szkół-wyższych-polska'">
+                        Download a PDF {model.slug} Dammit
+                        <if condition="model.comingSoon">{' sample'}</if>
+                    <else>
+                        Pobierz książkę
+                    </if>
                 </a>
             </div>
             <div if="model.printLink" class="option">
