Fix icon colors in download menu

--- a/src/app/components/get-this-title/get-this-title.scss
+++ b/src/app/components/get-this-title/get-this-title.scss
@@ -111,8 +111,8 @@
     }
 
     .fa:not(.fa-times) {
-        color: darken(os-color(light-blue), 10%);
         margin-left: -3rem;
+        text-align: center;
         transform: scale(1.2);
         width: 2.5rem;
     }
