--- a/src/app/components/get-this-title/get-this-title.html
+++ b/src/app/components/get-this-title/get-this-title.html
@@ -58,9 +58,9 @@
                     tabindex="{model.submenu === '' ? 0 : -1}">
                     <span class="fa fa-cloud-download"></span>
                     <if condition="model.slug.substr(-6) === 'polska'">
-                        Pobierz książkę
+                        {' Pobierz książkę'}
                     <else>
-                        Download a PDF
+                        {' Download a PDF'}
                         <if condition="model.comingSoon">{' sample'}</if>
                     </if>
                 </a>
