Set background to white on Partners page

--- a/src/app/pages/partners/partners.scss
+++ b/src/app/pages/partners/partners.scss
@@ -1,6 +1,7 @@
 @import '../../node_modules/pattern-library/core/pattern-library/headers';
 
 .partners-page {
+    background-color: ui-color(white);
     line-height: 3rem;
 
     .container {
