:bug: fix CSS sourcemaps (HACK)
This runs `node-sass` directly rather than `gulp-sass`. It should be switched back to `gulp-sass`

--- a/src/app/components/get-this-title/get-this-title.scss
+++ b/src/app/components/get-this-title/get-this-title.scss
@@ -1,5 +1,5 @@
 @import 'mixins/triangle';
-@import '../../node_modules/pattern-library/core/pattern-library/headers';
+@import '../../../node_modules/pattern-library/core/pattern-library/headers';
 
 .get-this-title {
     .remover {
