--- a/src/app/components/products-boxes/products-boxes.scss
+++ b/src/app/components/products-boxes/products-boxes.scss
@@ -1,5 +1,5 @@
 @import 'mixins/responsive';
-@import '../../node_modules/pattern-library/core/pattern-library/headers';
+@import '../../../node_modules/pattern-library/core/pattern-library/headers';
 
 .products-boxes {
 
