--- a/src/app/pages/openstax-tutor/openstax-tutor.scss
+++ b/src/app/pages/openstax-tutor/openstax-tutor.scss
@@ -1,4 +1,4 @@
-@import '../../node_modules/pattern-library/core/pattern-library/headers';
+@import '../../../node_modules/pattern-library/core/pattern-library/headers';
 
 $sea-bottom: rgb(0, 36, 106);
 $sea-top: rgb(6, 71, 119);
