--- a/src/app/components/share/share.scss
+++ b/src/app/components/share/share.scss
@@ -1,4 +1,4 @@
-@import '../../node_modules/pattern-library/core/pattern-library/molecules';
+@import '../../../node_modules/pattern-library/core/pattern-library/molecules';
 
 $facebook-blue: #3b5998;
 $twitter-blue: #00aced;
