--- a/src/app/components/shell/header/upper-menu/upper-menu.scss
+++ b/src/app/components/shell/header/upper-menu/upper-menu.scss
@@ -1,4 +1,4 @@
-@import '../../node_modules/pattern-library/core/pattern-library/headers';
+@import '../../../node_modules/pattern-library/core/pattern-library/headers';
 
 .page-header > .meta-nav {
     height: 0;
