--- a/src/app/pages/errata/detail/detail.scss
+++ b/src/app/pages/errata/detail/detail.scss
@@ -1,4 +1,4 @@
-@import '../../node_modules/pattern-library/core/pattern-library/headers';
+@import '../../../node_modules/pattern-library/core/pattern-library/headers';
 
 $graytop-border: #f4f4f4;
 $graytop-start: #fcfcfc;
