--- a/src/app/pages/faq/faq.scss
+++ b/src/app/pages/faq/faq.scss
@@ -1,4 +1,4 @@
-@import '../../node_modules/pattern-library/core/pattern-library/headers';
+@import '../../../node_modules/pattern-library/core/pattern-library/headers';
 
 .faq-page {
     padding-bottom: 4rem;
