--- a/src/app/pages/partners/partners.scss
+++ b/src/app/pages/partners/partners.scss
@@ -1,4 +1,4 @@
-@import '../../node_modules/pattern-library/core/pattern-library/headers';
+@import '../../../node_modules/pattern-library/core/pattern-library/headers';
 
 .partners-page {
     background-color: ui-color(white);
