Add section navigator

--- a/src/app/pages/openstax-tutor/openstax-tutor.html
+++ b/src/app/pages/openstax-tutor/openstax-tutor.html
@@ -1,4 +1,5 @@
 <template args="model">
+    <section-navigator skip="true"></section-navigator>
     <if condition="model.frontier">
         <div class="sticky-footer {model.footerHeight}">
             <div class="button-group">
